...
      DashboardComponent = WeightTrendsDashboard;
    } else {
      DashboardComponent = WaterTrendsDashboard;
    }

    return (
      <View testID='progress-dashboard-item' style={styles.carouselItem}>
        <DashboardComponent data={item} goal={weightGoal} />
      </View>
    );
  };

  const renderDotIndicator = () => {
...
        ))}
      </View>
    );
  };

  return (
    <View testID='progressOverview' style={styles.scrollableArea}>
      <FlatList
        data={displayData} // Array of data for each dashboard
        renderItem={renderDashboardItem}
        keyExtractor={(item, index) => index.toString()}
        horizontal
        pagingEnabled
...
