...
import { useGlobalContext } from '../context/GlobalProvider';

const StreakBar = ({ totalDays }) => {
  const { streak } = useGlobalContext();

  return (
      <View testID='streakBar' style={styles.container}>
        <View style={styles.header}>
            <Text style={styles.title}>30 Day Challenge</Text>
            <Text style={styles.progressText}>Day {streak} of {totalDays}</Text>
        </View>
        <View style={styles.progressContainer}>
            <Progress.Bar progress={streak/7} height={10} width={100} 
...
