...
      DashboardComponent = CaloriesTrendsDashboard;
    } else {
      DashboardComponent = MacroTrendsDashboard;
    }

    return (
      <View testID="analysis-dashboard-item" style={styles.carouselItem}>
        <DashboardComponent data={item} goal={calorieGoal} />
      </View>
    );
  };

  const renderDotIndicator = () => {
...
